fix overflow of right stepbox column

--- a/imports/ui/pages/preferences/preferences.page.css
+++ b/imports/ui/pages/preferences/preferences.page.css
@@ -20,7 +20,7 @@
 
 .preferences-modal-container {
     position: absolute;
-    height: 55.7%;
+    height: 60.7%;
     width: 83.7%;
     top: 32.8%;
     left: 7.4%;
@@ -106,6 +106,8 @@
 
 .stepbox-padding {
     padding: 5% 7%;
+    padding-bottom: 2%;
+    padding-top: 10%;
     width: 100%;
     height: 100%;
     -webkit-box-sizing: border-box;
@@ -216,6 +218,10 @@ div .MuiFormControl-root {
     height: 1.5em !important;
 }
 
+.MuiInput-input {
+    font-size: 16px;
+}
+
 img {
     max-width: 100%;
 }
@@ -237,13 +243,25 @@ strong.blacklist-stepbox-title {
       font-size: calc(16px + 6 * ((100vw - 1000px) / 680));
     }
 
-    .MuiFormControlLabel-label {
+    .MuiFormControlLabel-label, .MuiInput-input {
       font-size: calc(16px + 6 * ((100vw - 1000px) / 680)) !important;
+    }
+}
+
+@media only screen and (max-width: 850px) {
+    .customize-buttons-container {
+      grid-template-columns: 60% 40%;
     }
 }
 
 @media only screen and (max-width: 750px) {
     .preferences-col-left {
-        grid-row-gap: 2.2%;
+        grid-template-rows: 18.6% 9.2 13.8% 10.2% 48.2;
+        grid-row-gap: 0%;
+    }
+
+    .step-text-container {
+        grid-template-rows: 50% 50% !important;
+        grid-row-gap: 0%;
     }
 }
